Add policy rollback and version compare APIs (PZ-023)
